# adoptanimals

./: .env  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210413_0731.py  0003_auto_20210414_0854.py  0004_auto_20210414_0904.py  0005_alter_user_first_name.py
accounts/templates/accounts/: _form.html  delete_user.html  login.html  password_change.html  password_change_done.html  password_reset_complete.html  (+7 more)
adopt_animals/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
adopt_animals/migrations/: 0001_initial.py  0002_auto_20210428_0511.py  0003_auto_20210430_0415.py  0004_like.py  0005_message_messageroom.py  0006_message_message_user.py  0007_message_create_time.py  0008_messageroom_update_time.py
animal_project/: settings.py  settings_mysql.py  settings_mysql_local.py  urls.py  wsgi.py
fixtures/: state_initial copy.json  state_initial.json
static/: staticfiles.json
static 2/js/: hamburger-menu.js  main.js  swiper.min.js
static/css/: gallery.min.css  gallery.min.css.br  hamburger-menu.925888b5f075.css  hamburger-menu.css  hamburger-menu.css.br  main.css  main.css.br  swiper.min.10dbc2a5f885.css.br
static/js/: canvas-to-blob.min.33ecbe6885ad.js.br  hamburger-menu.js  hamburger-menu.js.br  jquery.cloudinary.js.br  like.608bc3115da2.js  like.608bc3115da2.js.br  load-image.all.min.c4cdadc311ce.js.br  main.js.br  swiper.min.7854bd7f3499.js.br
templates/: _footer.html  _navbar.html  base.html  index.html
(+24 files in other folders)
